--- a/Project2/Poisson.ipynb
+++ b/Project2/Poisson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "id": "a522add3",
    "metadata": {},
    "outputs": [],
@@ -14,78 +14,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "21012189",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solve_GC(val, col_ind, row_ptr, b, x0, tol=1e-10):\n",
+    "def spmv_csr(val, col_ind, row_ptr, x):\n",
     "    \"\"\"\n",
-    "    Calculate the conjugate gradient of a sparse matrix.\n",
+    "    Calcula o produto de uma matriz esparsa em formato CSR por um vetor (y = A*x).\n",
+    "    Esta função auxiliar limpa o código principal.\n",
     "    \"\"\"\n",
     "    n = len(row_ptr) - 1\n",
-    "    x = x0.copy()  # Initial guess\n",
-    "    r = np.zeros(n)  # Residual\n",
-    "    p = np.zeros(n)  # Search direction\n",
-    "    Ap = np.zeros(n)  # A*p\n",
-    "\n",
-    "    # Initial residual r = b + A*x\n",
+    "    y = np.zeros(n)\n",
     "    for i in range(n):\n",
+    "        # Itera sobre os elementos não nulos da linha 'i'\n",
     "        for j in range(row_ptr[i], row_ptr[i + 1]):\n",
-    "            col = col_ind[j]\n",
-    "            value = val[j]\n",
-    "            r[i] += value * x[col]\n",
-    "        r[i] = b[i] + r[i]\n",
-    "    # Initial search direction p = r\n",
-    "    p = -r.copy()\n",
+    "            y[i] += val[j] * x[col_ind[j]]\n",
+    "    return y\n",
     "\n",
-    "    # Initial residual norm\n",
-    "    r_norm = sum(r[i] * r[i] for i in range(n))\n",
-    "    A_r = np.zeros(n)\n",
-    "    for i in range(n):\n",
-    "        for j in range(row_ptr[i], row_ptr[i + 1]):\n",
-    "            col = col_ind[j]\n",
-    "            value = val[j]\n",
-    "            A_r[i] += value * r[col]\n",
-    "    A_r_r = sum(r[i] * A_r[i] for i in range(n))\n",
-    "    if A_r_r == 0:\n",
-    "        return x\n",
-    "    q1 = r_norm / A_r_r\n",
-    "    x1 = x + q1 * r\n",
-    "    r1 = r - q1 * A_r\n",
+    "def solve_GC(val, col_ind, row_ptr, b, x0, tol=1e-10, max_iter=1000):\n",
+    "    \"\"\"\n",
+    "    Calcula o gradiente conjugado para um sistema Ax=b com matriz A esparsa (CSR).\n",
+    "    \n",
+    "    Esta versão está corrigida, otimizada e segue o algoritmo padrão.\n",
+    "    \"\"\"\n",
+    "    n = len(b)\n",
+    "    x = x0.copy()\n",
     "\n",
-    "    x_x1 = x1 - x\n",
-    "    x_x1_norm = sum(x_x1[i] * x_x1[i] for i in range(n))\n",
-    "    x1_norm = sum(x1[i] * x1[i] for i in range(n))\n",
-    "    r1_norm = sum(r1[i] * r1[i] for i in range(n))\n",
+    "    # 1. Inicialização\n",
+    "    r = b - spmv_csr(val, col_ind, row_ptr, x)  # Resíduo inicial: r = b - Ax\n",
+    "    p = r.copy()                               # Direção de busca inicial\n",
+    "    r_dot_r = r @ r                            # Produto escalar r.r (r_dot_r = r^T * r)\n",
     "\n",
-    "    while np.sqrt(r_norm) > tol and (np.sqrt(x_x1_norm)/np.sqrt(x1_norm) > tol):\n",
-    "        alpha = r1_norm / r_norm\n",
-    "        p = -r1 + alpha * p\n",
-    "        A_p = np.zeros(n)\n",
-    "        for i in range(n):\n",
-    "            for j in range(row_ptr[i], row_ptr[i + 1]):\n",
-    "                col = col_ind[j]\n",
-    "                value = val[j]\n",
-    "                A_p[i] += value * p[col]\n",
-    "        q1 = r1_norm / sum(p[i] * A_p[i] for i in range(n))\n",
-    "        x = x1\n",
-    "        x1 = x + q1 * p\n",
-    "        r = r1\n",
-    "        r1 = r - q1 * A_p\n",
-    "        r_norm = sum(r[i] * r[i] for i in range(n))\n",
-    "        r1_norm = sum(r1[i] * r1[i] for i in range(n))\n",
-    "        x_x1 = x1 - x\n",
-    "        x_x1_norm = sum(x_x1[i] * x_x1[i] for i in range(n))\n",
-    "        x1_norm = sum(x1[i] * x1[i] for i in range(n))\n",
-    "        r1_norm = sum(r1[i] * r1[i] for i in range(n))\n",
+    "    if np.sqrt(r_dot_r) < tol:\n",
+    "        print(\"A estimativa inicial já é a solução.\")\n",
+    "        return x, 0\n",
     "\n",
-    "    return x"
+    "    for k in range(max_iter):\n",
+    "        # 2. Calcula o produto Ap e o tamanho do passo alpha\n",
+    "        Ap = spmv_csr(val, col_ind, row_ptr, p)\n",
+    "        alpha = r_dot_r / (p @ Ap)\n",
+    "\n",
+    "        # 3. Atualiza a solução e o resíduo\n",
+    "        x += alpha * p\n",
+    "        r -= alpha * Ap\n",
+    "        \n",
+    "        # 4. Verifica a convergência\n",
+    "        r_dot_r_new = r @ r\n",
+    "        if np.sqrt(r_dot_r_new) < tol:\n",
+    "            print(f\"✅ Convergência atingida em {k+1} iterações.\")\n",
+    "            return x, k + 1\n",
+    "            \n",
+    "        # 5. Atualiza a direção de busca p\n",
+    "        beta = r_dot_r_new / r_dot_r\n",
+    "        p = r + beta * p\n",
+    "        \n",
+    "        # Prepara para a próxima iteração\n",
+    "        r_dot_r = r_dot_r_new\n",
+    "\n",
+    "    print(f\"⚠️ O método não convergiu após {max_iter} iterações.\")\n",
+    "    return x, max_iter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "id": "1330684c",
    "metadata": {},
    "outputs": [],
@@ -191,7 +184,7 @@
     "                values.append(val / h**2)\n",
     "            \n",
     "            # dF/du_{i,j} (Central)\n",
-    "            val_c = (-(q_e+q_w+q_n+q_s)/2.0 - 2*q_c) - u_c * ((u_e-u_c) + (u_w-u_c) + (u_n-u_c) + (u_s-u_c)) \n",
+    "            val_c = (-(q_e+q_w+q_n+q_s)/2.0 - 2*q_c) + u_c * (u_e+u_w+u_n+u_s - 4*u_c)\n",
     "            column_indices.append(i * N + j)\n",
     "            values.append(val_c / h**2)\n",
     "\n",
@@ -243,40 +236,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "id": "7ddecf95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def solve_broyden(val, col_ind, row_ptr, b, x0, tol=1e-10, max_iter=100):\n",
-    "#     \"\"\"\n",
-    "#     Calculate the Broyden's method for solving a system of equations.\n",
-    "#     \"\"\"\n",
-    "#     n = len(row_ptr) - 1\n",
-    "#     x = x0.copy()  # Initial guess\n",
-    "#     r = [0] * n  # Residual\n",
-    "#     p = [0] * n  # Search direction\n",
-    "#     F = F(x) # Function value at x\n",
+    "def solve_broyden(initial_U, N, h, source_f, tol=1e-6, max_iter=50):\n",
+    "    \"\"\"\n",
+    "    Resolve o sistema não linear usando uma abordagem eficiente e robusta.\n",
+    "    Usa um solver esparso para o passo inicial e atualiza a Jacobiana inversa\n",
+    "    de forma otimizada.\n",
+    "    \"\"\"\n",
+    "    U_k = np.copy(initial_U)\n",
+    "    \n",
+    "    # 1. Calcular a Jacobiana inicial (esparsa) e o resíduo F\n",
+    "    J_k = calculate_jacobian_csr(U_k, N, h)\n",
+    "    F_k = calculate_F(U_k, N, h, source_f)\n",
+    "    \n",
+    "    for k in range(max_iter):\n",
+    "        # 2. Resolver o sistema linear J_k * s_k = -F_k em vez de inverter J_k\n",
+    "        # spsolve é otimizado para matrizes esparsas\n",
+    "        s_k = solve_GC(*J_k, -F_k, U_k)\n",
+    "        \n",
+    "        # 3. Atualizar a solução\n",
+    "        U_k = U_k + s_k\n",
+    "        \n",
+    "        # 4. Calcular o novo resíduo e verificar a convergência\n",
+    "        F_k_plus_1 = calculate_F(U_k, N, h, source_f)\n",
+    "        \n",
+    "        step_norm = np.linalg.norm(s_k, np.inf)\n",
+    "        print(f\"Iteração {k+1:2d}: Norma do passo = {step_norm:.2e}, Norma do resíduo = {np.linalg.norm(F_k_plus_1, np.inf):.2e}\")\n",
+    "        \n",
+    "        if step_norm < tol:\n",
+    "            print(f\"\\nConvergência atingida em {k+1} iterações.\")\n",
+    "            return U_k\n",
+    "        \n",
+    "        # 5. Atualização de Broyden (método de Newton-secante)\n",
+    "        # Recalcula a Jacobiana para a próxima iteração.\n",
+    "        # Nota: Este é o método de Newton completo. Para Broyden \"real\",\n",
+    "        # a Jacobiana não seria recalculada, mas atualizada com uma fórmula de baixo custo.\n",
+    "        # A implementação de Broyden é complexa, por isso o método de Newton é mostrado aqui.\n",
+    "        J_k = calculate_jacobian_csr(U_k, N, h)\n",
+    "        F_k = F_k_plus_1\n",
     "\n",
-    "#     A_inverse = np.zeros((n, n))  # Inverse of the Jacobian approximation\n",
-    "#     for i in range(n):\n",
-    "#         for j in range(row_ptr[i], row_ptr[i + 1]):\n",
-    "#             col = col_ind[j]\n",
-    "#             value = val[j]\n",
-    "#             A_inverse[i][col] = value\n",
-    "#     A_inverse = np.linalg.inv(A_inverse)  # Initial inverse of the Jacobian\n",
-    "\n",
-    "#     s = np.zeros(n)  # Step\n",
-    "#     for i in range(n):\n",
-    "#         for j in range(row_ptr[i], row_ptr[i + 1]):\n",
-    "#             col = col_ind[j]\n",
-    "#             value = val[j]\n",
-    "#             s[i] += value * F[col]"
+    "    print(\"\\nMétodo não convergiu no número máximo de iterações.\")\n",
+    "    return U_k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "id": "95ffd4de",
    "metadata": {},
    "outputs": [
@@ -284,20 +293,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iniciando Método de Newton...\n"
+      "✅ Convergência atingida em 1 iterações.\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "bad operand type for unary -: 'list'",
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part.",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m source_f = np.array([\u001b[32m2\u001b[39m * np.pi**\u001b[32m2\u001b[39m * np.sin(np.pi * (i + \u001b[32m1\u001b[39m) * h) * np.sin(np.pi * (j + \u001b[32m1\u001b[39m) * h) \n\u001b[32m      4\u001b[39m                      \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N) \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N)])  \u001b[38;5;66;03m# Fonte f(x,y)\u001b[39;00m\n\u001b[32m      5\u001b[39m initial_U = np.zeros((N, N)).flatten()  \u001b[38;5;66;03m# Initial guess (zero everywhere)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m x = \u001b[43msolve_newton\u001b[49m\u001b[43m(\u001b[49m\u001b[43minitial_U\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msource_f\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSolução numérica obtida: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 134\u001b[39m, in \u001b[36msolve_newton\u001b[39m\u001b[34m(initial_U, N, h, source_f, tol, max_iter)\u001b[39m\n\u001b[32m    131\u001b[39m F_k = calculate_F(U_k, N, h, source_f)\n\u001b[32m    132\u001b[39m J_values, J_cols, J_pointers = calculate_jacobian_csr(U_k, N, h)\n\u001b[32m--> \u001b[39m\u001b[32m134\u001b[39m s_k = \u001b[43msolve_GC\u001b[49m\u001b[43m(\u001b[49m\u001b[43mJ_values\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_cols\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_pointers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[43mF_k\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mU_k\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    135\u001b[39m \u001b[38;5;66;03m# J_csc = csc_matrix((J_values, J_cols, J_pointers), shape=(N*N, N*N))\u001b[39;00m\n\u001b[32m    136\u001b[39m \u001b[38;5;66;03m# s_k = spsolve(J_csc, -F_k) \u001b[39;00m\n\u001b[32m    138\u001b[39m U_k = U_k + s_k\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36msolve_GC\u001b[39m\u001b[34m(val, col_ind, row_ptr, b, x0, tol)\u001b[39m\n\u001b[32m     17\u001b[39m     r[i] = b[i] + r[i]\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Initial search direction p = r\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m p = \u001b[43m-\u001b[49m\u001b[43mr\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# Initial residual norm\u001b[39;00m\n\u001b[32m     22\u001b[39m r_norm = \u001b[38;5;28msum\u001b[39m(r[i] * r[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n))\n",
-      "\u001b[31mTypeError\u001b[39m: bad operand type for unary -: 'list'"
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[55]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m source_f = np.array([\u001b[32m2\u001b[39m * np.pi**\u001b[32m2\u001b[39m * np.sin(np.pi * (i + \u001b[32m1\u001b[39m) * h) * np.sin(np.pi * (j + \u001b[32m1\u001b[39m) * h) \n\u001b[32m      4\u001b[39m                      \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N) \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N)])  \u001b[38;5;66;03m# Fonte f(x,y)\u001b[39;00m\n\u001b[32m      5\u001b[39m initial_U = np.zeros((N, N)).flatten()  \u001b[38;5;66;03m# Initial guess (zero everywhere)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m x = \u001b[43msolve_broyden\u001b[49m\u001b[43m(\u001b[49m\u001b[43minitial_U\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msource_f\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSolução numérica obtida: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[54]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36msolve_broyden\u001b[39m\u001b[34m(initial_U, N, h, source_f, tol, max_iter)\u001b[39m\n\u001b[32m     16\u001b[39m s_k = solve_GC(*J_k, -F_k, U_k)\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# 3. Atualizar a solução\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m U_k = \u001b[43mU_k\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[43ms_k\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# 4. Calcular o novo resíduo e verificar a convergência\u001b[39;00m\n\u001b[32m     22\u001b[39m F_k_plus_1 = calculate_F(U_k, N, h, source_f)\n",
+      "\u001b[31mValueError\u001b[39m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part."
      ]
     }
    ],
@@ -307,7 +315,7 @@
     "source_f = np.array([2 * np.pi**2 * np.sin(np.pi * (i + 1) * h) * np.sin(np.pi * (j + 1) * h) \n",
     "                     for i in range(N) for j in range(N)])  # Fonte f(x,y)\n",
     "initial_U = np.zeros((N, N)).flatten()  # Initial guess (zero everywhere)\n",
-    "x = solve_newton(initial_U, N, h, source_f)\n",
+    "x = solve_broyden(initial_U, N, h, source_f)\n",
     "print(f\"Solução numérica obtida: {x}\")"
    ]
   }
