--- a/Project2/Poisson.ipynb
+++ b/Project2/Poisson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 193,
    "id": "a522add3",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 194,
    "id": "21012189",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 195,
    "id": "1330684c",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
     "        U_k = U_k + s_k\n",
     "\n",
     "        step_norm = np.linalg.norm(s_k, np.inf)\n",
-    "        print(f\"Iteração {k+1:2d}: Norma do passo = {step_norm:.2e}\")\n",
+    "        # print(f\"Iteração {k+1:2d}: Norma do passo = {step_norm:.2e}\")\n",
     "\n",
     "        if step_norm < tol:\n",
     "            print(f\"\\nConvergência atingida em {k+1} iterações.\")\n",
@@ -256,72 +256,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solve_broyden(initial_U, N, h, source_f, tol=1e-10, max_iter=50):\n",
+    "def solve_broyden(initial_U, N, h, source_f, tol=1e-6, max_iter=50):\n",
     "    \"\"\"\n",
     "    Solve the Poisson equation using Broyden's method.\n",
     "    \"\"\"\n",
-    "    J_values, J_cols, J_pointers = calculate_jacobian_csr(initial_U, N, h)  \n",
-    "    v = calculate_F(initial_U, N, h, source_f)\n",
-    "    A_inv = solve_GC(J_values, J_cols, J_pointers, -v)\n",
+    "    J_values, J_cols, J_pointers = calculate_jacobian_csr(initial_U, N, h)\n",
     "    U_k = np.copy(initial_U)\n",
-    "    v_k = calculate_F(U_k, N, h, source_f)\n",
+    "    A_inv = np.zeros((N * N, N * N))\n",
+    "    for i in range(len(J_pointers) - 1):\n",
+    "        for j in range(J_pointers[i], J_pointers[i + 1]):\n",
+    "            value = J_values[j]\n",
+    "            column = J_cols[j]\n",
+    "            A_inv[i, column] = value\n",
+    "    A_inv = np.linalg.inv(A_inv)\n",
+    "    v = calculate_F(initial_U, N, h, source_f)\n",
     "    for k in range(max_iter):\n",
-    "        # 4. Calcular o passo de Newton usando a aproximação da inversa: s_k = -A_k^{-1} * v_k\n",
-    "        s_k = -A_inv @ v_k\n",
+    "        # Compute step\n",
+    "        s_k = -A_inv @ v\n",
     "        \n",
-    "        # 5. Atualizar a solução: U_{k+1} = U_k + s_k\n",
-    "        U_k_plus_1 = U_k + s_k\n",
+    "        # Update solution\n",
+    "        U_k1 = U_k + s_k\n",
     "        \n",
-    "        # Critério de parada: norma do passo\n",
-    "        print(s_k)\n",
+    "        # Calculate new residual\n",
+    "        v1 = calculate_F(U_k1, N, h, source_f)\n",
+    "        y_k = v1 - v\n",
+    "        \n",
+    "        # Broyden update of the Jacobian inverse approximation\n",
+    "        denominator = s_k @ s_k\n",
+    "        if np.abs(denominator) < 1e-12:  # Prevent division by zero\n",
+    "            break\n",
+    "            \n",
+    "        A_inv = A_inv + np.outer((s_k - A_inv @ y_k), s_k) @ A_inv / denominator\n",
+    "        \n",
+    "        # Update for next iteration\n",
+    "        U_k = U_k1\n",
+    "        v = v1\n",
+    "        \n",
+    "        # Check convergence\n",
     "        step_norm = np.linalg.norm(s_k, np.inf)\n",
+    "        residual_norm = np.linalg.norm(v, np.inf)\n",
+    "        # print(f\"Iteração {k+1:2d}: Norma do passo = {step_norm:.2e}, Resíduo = {residual_norm:.2e}\")\n",
+    "        \n",
     "        if step_norm < tol:\n",
     "            print(f\"\\nConvergência atingida em {k+1} iterações.\")\n",
-    "            return U_k_plus_1\n",
-    "            \n",
-    "        # 6. Calcular o novo valor da função, v_{k+1} = F(U_{k+1})\n",
-    "        v_k_plus_1 = calculate_F(U_k_plus_1, N, h, source_f)\n",
-    "\n",
-    "        # 7. Calcular a diferença nos valores da função: y_k = v_{k+1} - v_k\n",
-    "        y_k = v_k_plus_1 - v_k\n",
-    "        \n",
-    "        # 8. Atualizar a aproximação da inversa usando a fórmula de Sherman-Morrison\n",
-    "        # A_{k+1}^{-1} = A_k^{-1} + ( (s_k - A_k^{-1}y_k) * s_k^T * A_k^{-1} ) / ( s_k^T * A_k^{-1} * y_k )\n",
-    "        A_inv_y = A_inv @ y_k\n",
-    "        s_T_A_inv = s_k.T @ A_inv\n",
-    "        denominator = s_T_A_inv @ y_k\n",
-    "        \n",
-    "        numerator = np.outer((s_k - A_inv_y), s_T_A_inv)\n",
-    "        A_inv += numerator / denominator\n",
-    "\n",
-    "        # 9. Preparar para a próxima iteração\n",
-    "        U_k = U_k_plus_1\n",
-    "        v_k = v_k_plus_1\n",
-    "        \n",
-    "        residual_norm = np.linalg.norm(v_k, np.inf)\n",
-    "        print(f\"Iteração {k+1:2d}: Norma do passo = {step_norm:.2e}, Norma do resíduo = {residual_norm:.2e}\")\n",
-    "\n",
-    "    print(f\"\\nAtenção: O número máximo de iterações ({max_iter}) foi atingido sem convergência.\")\n",
+    "            return U_k  # Return in original shape\n",
+    "    \n",
+    "    print(\"Atenção: Máximo de iterações atingido sem convergência.\")\n",
     "    return U_k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 197,
    "id": "95ffd4de",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Improper number of dimensions to norm.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[162]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m source_f = np.array([\u001b[32m2\u001b[39m * np.pi**\u001b[32m2\u001b[39m * np.sin(np.pi * (i + \u001b[32m1\u001b[39m) * h) * np.sin(np.pi * (j + \u001b[32m1\u001b[39m) * h) \n\u001b[32m      4\u001b[39m                      \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N) \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N)])  \u001b[38;5;66;03m# Fonte f(x,y)\u001b[39;00m\n\u001b[32m      5\u001b[39m initial_U = np.zeros((N, N)).flatten()  \u001b[38;5;66;03m# Initial guess (zero everywhere)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m x = \u001b[43msolve_broyden\u001b[49m\u001b[43m(\u001b[49m\u001b[43minitial_U\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msource_f\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m x_newton = solve_newton(initial_U, N, h, source_f)\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSolução broyden: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[161]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36msolve_broyden\u001b[39m\u001b[34m(initial_U, N, h, source_f, tol, max_iter)\u001b[39m\n\u001b[32m     15\u001b[39m U_k_plus_1 = U_k + s_k\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# Critério de parada: norma do passo\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m step_norm = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlinalg\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnorm\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms_k\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43minf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m step_norm < tol:\n\u001b[32m     20\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mConvergência atingida em \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk+\u001b[32m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m iterações.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/lib/python3.13/site-packages/numpy/linalg/_linalg.py:2878\u001b[39m, in \u001b[36mnorm\u001b[39m\u001b[34m(x, ord, axis, keepdims)\u001b[39m\n\u001b[32m   2876\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m ret\n\u001b[32m   2877\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m2878\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mImproper number of dimensions to norm.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mValueError\u001b[39m: Improper number of dimensions to norm."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteração  1: Norma do passo = 5.88e-01, Resíduo = 9.33e+00\n",
+      "Iteração  2: Norma do passo = 2.95e-01, Resíduo = 3.86e+00\n",
+      "Iteração  3: Norma do passo = 6.03e-02, Resíduo = 9.29e-01\n",
+      "Iteração  4: Norma do passo = 9.03e-03, Resíduo = 1.97e-01\n",
+      "Iteração  5: Norma do passo = 1.08e-03, Resíduo = 1.59e-02\n",
+      "Iteração  6: Norma do passo = 9.73e-05, Resíduo = 3.86e-04\n",
+      "Iteração  7: Norma do passo = 4.49e-06, Resíduo = 1.19e-04\n",
+      "Iteração  8: Norma do passo = 7.42e-07, Resíduo = 3.26e-06\n",
+      "\n",
+      "Convergência atingida em 8 iterações.\n",
+      "Iniciando Método de Newton...\n",
+      "\n",
+      "Convergência atingida em 38 iterações.\n",
+      "Solução broyden: [-0.46895546 -0.63098143 -0.46895546 -0.63098143 -0.8307232  -0.63098143\n",
+      " -0.46895546 -0.63098143 -0.46895546]\n",
+      "Solução de Newton: [-0.46895549 -0.63098141 -0.46895549 -0.63098141 -0.83072319 -0.63098141\n",
+      " -0.46895549 -0.63098141 -0.46895549]\n",
+      "Solução exata: [0.5        0.70710678 0.5        0.70710678 1.         0.70710678\n",
+      " 0.5        0.70710678 0.5       ]\n"
      ]
     }
    ],
