--- a/Project2/Poisson.ipynb
+++ b/Project2/Poisson.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 109,
    "id": "a522add3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.sparse import csc_matrix\n",
-    "from scipy.sparse.linalg import spsolve"
+    "from scipy.sparse.linalg import spsolve\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 110,
    "id": "21012189",
    "metadata": {},
    "outputs": [],
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 111,
    "id": "1330684c",
    "metadata": {},
    "outputs": [],
@@ -230,7 +231,6 @@
     "# Resolve o sistema F(U)=0 com o Método de Newton\n",
     "def solve_newton(initial_U, N, h, source_f, tol=1e-10, max_iter=50):\n",
     "    U_k = np.copy(initial_U) \n",
-    "    print(\"Iniciando Método de Newton...\")\n",
     "    for k in range(max_iter):\n",
     "        F_k = calculate_F(U_k, N, h, source_f)\n",
     "        J_values, J_cols, J_pointers = calculate_jacobian_csr(U_k, N, h)\n",
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "7ddecf95",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "id": "95ffd4de",
    "metadata": {},
    "outputs": [
@@ -315,39 +315,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteração  1: Norma do passo = 5.88e-01, Resíduo = 9.33e+00\n",
-      "Iteração  2: Norma do passo = 2.95e-01, Resíduo = 3.86e+00\n",
-      "Iteração  3: Norma do passo = 6.03e-02, Resíduo = 9.29e-01\n",
-      "Iteração  4: Norma do passo = 9.03e-03, Resíduo = 1.97e-01\n",
-      "Iteração  5: Norma do passo = 1.08e-03, Resíduo = 1.59e-02\n",
-      "Iteração  6: Norma do passo = 9.73e-05, Resíduo = 3.86e-04\n",
-      "Iteração  7: Norma do passo = 4.49e-06, Resíduo = 1.19e-04\n",
-      "Iteração  8: Norma do passo = 7.42e-07, Resíduo = 3.26e-06\n",
+      "--------------------------------------------------\n",
+      "Processando malha N = 3x3...\n",
       "\n",
-      "Convergência atingida em 8 iterações.\n",
-      "Iniciando Método de Newton...\n",
+      "Convergência atingida em 40 iterações.\n",
       "\n",
-      "Convergência atingida em 38 iterações.\n",
-      "Solução broyden: [-0.46895546 -0.63098143 -0.46895546 -0.63098143 -0.8307232  -0.63098143\n",
-      " -0.46895546 -0.63098143 -0.46895546]\n",
-      "Solução de Newton: [-0.46895549 -0.63098141 -0.46895549 -0.63098141 -0.83072319 -0.63098141\n",
-      " -0.46895549 -0.63098141 -0.46895549]\n",
-      "Solução exata: [0.5        0.70710678 0.5        0.70710678 1.         0.70710678\n",
-      " 0.5        0.70710678 0.5       ]\n"
+      "Convergência atingida em 9 iterações.\n",
+      "--------------------------------------------------\n",
+      "Processando malha N = 10x10...\n",
+      "\n",
+      "Convergência atingida em 41 iterações.\n",
+      "Atenção: Máximo de iterações atingido sem convergência.\n",
+      "--------------------------------------------------\n",
+      "Processando malha N = 20x20...\n",
+      "\n",
+      "Convergência atingida em 41 iterações.\n",
+      "\n",
+      "Convergência atingida em 12 iterações.\n",
+      "--------------------------------------------------\n",
+      "Processando malha N = 50x50...\n"
      ]
     }
    ],
    "source": [
-    "N = 3\n",
-    "h = 1.0 / (N + 1)  # Grid spacing\n",
-    "source_f = np.array([2 * np.pi**2 * np.sin(np.pi * (i + 1) * h) * np.sin(np.pi * (j + 1) * h) \n",
-    "                     for i in range(N) for j in range(N)])  # Fonte f(x,y)\n",
-    "initial_U = np.zeros((N, N)).flatten()  # Initial guess (zero everywhere)\n",
-    "x = solve_broyden(initial_U, N, h, source_f)\n",
-    "x_newton = solve_newton(initial_U, N, h, source_f)\n",
-    "print(f\"Solução broyden: {x}\")\n",
-    "print(f\"Solução de Newton: {x_newton}\")\n",
-    "print(f\"Solução exata: {calculate_exact_solution(N, h)}\")"
+    "mesh_sizes = [3, 10, 20, 30]\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "for N in mesh_sizes:\n",
+    "    print(\"-\" * 50)\n",
+    "    print(f\"Processando malha N = {N}x{N}...\")\n",
+    "    \n",
+    "    h = 1.0 / (N + 1)\n",
+    "    \n",
+    "    exact_solution_vector = calculate_exact_solution(N, h)\n",
+    "    \n",
+    "    u = exact_solution_vector.reshape((N, N))\n",
+    "    f_term1 = 2 * np.pi**2 * u * (1 + u**2)\n",
+    "    \n",
+    "    g_term = np.zeros((N, N))\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "            x, y = (j + 1) * h, (i + 1) * h\n",
+    "            g_term[i, j] = (np.pi**2 * (np.cos(np.pi * x)**2 * np.sin(np.pi * y)**2 +\n",
+    "                                        np.sin(np.pi * x)**2 * np.cos(np.pi * y)**2))\n",
+    "    \n",
+    "    f_term2 = 2 * u * g_term\n",
+    "    source_f = (f_term1 - f_term2).flatten()\n",
+    "\n",
+    "    initial_U = np.zeros(N * N)\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    solution_newton = solve_newton(initial_U, N, h, source_f)\n",
+    "    time_newton = time.time() - start_time\n",
+    "    error_l2_newton, error_max_newton = calculate_error(solution_newton, exact_solution_vector, h)\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    solution_broyden = solve_broyden(initial_U, N, h, source_f)\n",
+    "    time_broyden = time.time() - start_time\n",
+    "    error_l2_broyden, error_max_broyden = calculate_error(solution_broyden, exact_solution_vector, h)\n",
+    "    \n",
+    "    results.append({\n",
+    "        \"N\": N,\n",
+    "        \"time_newton\": time_newton,\n",
+    "        \"err_l2_newton\": error_l2_newton,\n",
+    "        \"err_max_newton\": error_max_newton,\n",
+    "        \"time_broyden\": time_broyden,\n",
+    "        \"err_l2_broyden\": error_l2_broyden,\n",
+    "        \"err_max_broyden\": error_max_broyden,\n",
+    "    })\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\" \" * 25 + \"TABELA DE RESULTADOS FINAIS\")\n",
+    "print(\"=\"*80)\n",
+    "print(f\"{'N':>4s} | {'Tempo Newton (s)':>18s} | {'Erro L2 Newton':>18s} | {'Tempo Broyden (s)':>18s} | {'Erro L2 Broyden':>18s}\")\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "for res in results:\n",
+    "    print(f\"{res['N']:>4d} | {res['time_newton']:>18.4f} | {res['err_l2_newton']:>18.2e} | {res['time_broyden']:>18.4f} | {res['err_l2_broyden']:>18.2e}\")\n",
+    "print(\"=\"*80)"
    ]
   }
  ],
